--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "DirtyPanties",
-  "name": "DirtyPanties NFT",
+  "name": "DirtyPanties",
   "icons": [
     {
       "src": "favicon.ico",
